// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct statments totalling 1 expenses 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $45.00
  </h3>
</div>
`;

exports[`should render correct statments totalling 2 expense 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
     totalling 
    $560,000.34
  </h3>
</div>
`;
